--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -102,7 +102,7 @@ main {
   max-width: 700px;
   margin: 0 auto;
   padding: 10px 20px;
-  text-align: center;
+  text-align: left;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 4px 0px black;
     box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
