--- a/builds/development/views/help.html
+++ b/builds/development/views/help.html
@@ -1,1 +1,31 @@
-Help
+<div ng-include="'views/helpNav.html'"></div>
+<h1>Profile</h2>
+
+<form name="frmStep1"
+    ng-submit="submitStep1()" novalidate>
+
+    <section class="step1">
+
+	    Select your height: 
+	    <select name="feet" ng-model="profile.feet" ng-required="true">
+	      <option ng-repeat="feet in feet" value="{{feet}}">{{feet}}</option>
+		</select>'
+		<select name="inches" ng-model="profile.inches" ng-required="true">
+	      <option ng-repeat="inch in inches" value="{{inch}}">{{inch}}</option>
+		</select>''
+		
+	    <p class="error validationerror"
+	      ng-show="frmStep1.feet.$invalid && frmStep1.feet.$touched">
+	      Feet is a required field</p>
+
+	    <p class="error validationerror"
+	      ng-show="frmStep1.inches.$invalid && frmStep1.inches.$touched">
+	      Inches is a required field</p>
+
+	</section>
+
+	<button type="submit" class="btn"
+  		ng-disabled="frmStep1.$invalid">Next</button>
+  	<br/>
+  	<a ng-href="#/intro">Back to Intro</a>
+</form>
