--- a/builds/development/views/helpNav.html
+++ b/builds/development/views/helpNav.html
@@ -1,6 +1,6 @@
 <div>
   <ol>
-    <li><a ng-href="#/help">Profile</a></li>
+    <li><a ng-href="#/help">Profile {{specs.feet}}</a></li>
     <li><a ng-href="#/help/2">Shaft Options</a></li>
     <li><a ng-href="#/help/3">Grip Options</a></li>
     <li><a ng-href="#/help/4">Review</a></li>
