--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,6 +1,6 @@
-<div class="table">
+<div>
   <ul>
-    <li class="branding"><a ng-href="#/intro">Intro</a></li>
+    <li><a ng-href="#/intro">Intro</a></li>
     <li><a ng-href="#/specs">I Already Know My Club Specifications</a></li>
     <li><a ng-href="#/help">Help</a></li>
   </ul>
