--- a/builds/development/views/specs.html
+++ b/builds/development/views/specs.html
@@ -86,6 +86,13 @@
     		<li>Grip Size: {{item.gripSize}}</li>
     		<li>Clubs: {{item.club}}</li>
     	</ul>
+    	Base Club Price
+    	<br/>
+    	Total Options
+    	<br/>
+    	Total with Adjustments
+    	<br/>
+    	<textarea ng-model="item.comments"></textarea>
     </section>
 
 	<button type="submit" class="btn"
