--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
     <li><a ng-href="#/intro">Intro</a></li>
-    <li><a ng-href="#/specs">I Already Know My Club Specifications</a></li>
-    <li><a ng-href="#/help">Help</a></li>
+    <li><a ng-href="#/specs">Enter Custom Specs</a></li>
+    <li><a ng-href="#/help">Help Me Customize</a></li>
   </ul>
 </div>
