--- a/builds/development/views/helpNav.html
+++ b/builds/development/views/helpNav.html
@@ -1,8 +1,8 @@
 <div>
   <ol>
-    <li><a ng-href="#/help">Profile</a></li>
-    <li><a ng-href="#/help/2">Shaft Options</a></li>
-    <li><a ng-href="#/help/3">Grip Options</a></li>
-    <li><a ng-href="#/help/4">Review</a></li>
+	<li ng-class="{ active: isActive('/help') }">Profile</li>
+    <li ng-class="{ active: isActive('/help/2') }">Shaft Options</li>
+    <li ng-class="{ active: isActive('/help/3') }">Grip Options</li>
+    <li ng-class="{ active: isActive('/helpReview') }">Review</li>
   </ol>
 </div>
