updating to match wireframes

--- a/builds/development/views/help2.html
+++ b/builds/development/views/help2.html
@@ -7,6 +7,17 @@
 
     <section class="step2">
 
+      Select a Shaft Type: 
+      <select name="shaftType" ng-model="shaftType" ng-required="true">
+          <option ng-repeat="attribute in shaftTypeValues[0].values" value="{{attribute.uniqueID}}" ng-selected="{{attribute.uniqueID == shaftType}}">{{attribute.value}}</option>
+      </select>
+      
+      <p 
+        ng-show="frmStep2.shaftType.$invalid && frmStep2.shaftType.$touched">
+        Shaft type is a required field</p>
+
+      <br/>
+
     	{{distanceQuestion}}: 
       <select name="driverDistance" ng-model="driverDistance" ng-required="true">
           <option ng-repeat="t in trajectoryMeasurement" value="{{t}}" ng-selected="{{t == driverDistance}}">{{t}}</option>
@@ -15,10 +26,19 @@
       <p ng-show="frmStep2.driverDistance.$invalid && frmStep2.driverDistance.$touched">
         {{distanceQuestion}} is a required field</p>
 
+      <br/>
+
+      What Is Your Desired Ball Trajectory?
+      <select name="trajectory" ng-model="trajectory" ng-required="true">
+          <option ng-repeat="t in trajectoryMeasurement" value="{{t}}">{{t}}</option>
+      </select>
+
+      <p ng-show="frmStep2.trajectory.$invalid && frmStep2.trajectory.$touched">
+        Trajectory is a required field</p>
+
 	</section>
 
 	<button type="submit" 
-  		ng-disabled="frmStep2.$invalid">Next</button>
-  	<br/>
-  	<a ng-href="#/intro">Back to Intro</a>
+  		ng-disabled="frmStep2.$invalid">Proceed to Grip Type</button>
+
 </form>
