--- a/builds/development/views/help3.html
+++ b/builds/development/views/help3.html
@@ -7,6 +7,17 @@
 
     <section class="step3">
 
+      Select a Grip Type: 
+      <select name="gripType" ng-model="gripType" ng-required="true">
+          <option ng-repeat="g in gripValues[0].values" value="{{g.uniqueID}}" ng-selected="{{g.uniqueID = gripType}}">{{g.value}}</option>
+      </select>
+      
+      <p 
+        ng-show="frmStep3.gripType.$invalid && frmStep2.gripType.$touched">
+        Grip type is a required field</p>
+
+      <br/>
+
     	Hand Length: 
       <select name="handLength" ng-model="handLength" ng-required="true">
         <option ng-repeat="h in handLengthMeasurement" value="{{h}}" ng-selected="{{h == handLength}}">{{h}}</option>   
@@ -30,7 +41,7 @@
 	</section>
 
 	<button type="submit"
-  		ng-disabled="frmStep3.$invalid">Next</button>
+  		ng-disabled="frmStep3.$invalid">Review & Purchase</button>
   	<br/>
   	<a ng-href="#/intro">Back to Intro</a>
 </form>
