--- a/builds/development/views/helpNav.html
+++ b/builds/development/views/helpNav.html
@@ -1,8 +1,8 @@
 <div>
   <ol>
-	<li ng-class="{ active: isActive('/help') }">Profile</li>
-    <li ng-class="{ active: isActive('/help/2') }">Shaft Options</li>
-    <li ng-class="{ active: isActive('/help/3') }">Grip Options</li>
-    <li ng-class="{ active: isActive('/helpReview') }">Review</li>
+	<li ng-class="{ active: isActive('/help') }">Profile Info</li>
+    <li ng-class="{ active: isActive('/help/2') }">Shaft Type</li>
+    <li ng-class="{ active: isActive('/help/3') }">Grip Type</li>
+    <li ng-class="{ active: isActive('/helpReview') }">Review & Purchase</li>
   </ol>
 </div>
