--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -2,6 +2,6 @@
   <ul>
     <li><a ng-href="#/intro">Intro</a></li>
     <li><a ng-href="#/specs">Enter Custom Specs</a></li>
-    <li><a ng-href="#/help">Help Me Customize</a></li>
+    <li><a ng-href="#/fittingGuide">Fitting Guide</a></li>
   </ul>
 </div>
