--- a/builds/development/views/help.html
+++ b/builds/development/views/help.html
@@ -6,6 +6,12 @@
 
     <section class="step1">
 
+	    Dexterity:
+	    <input type="radio" ng-model="dexterity" value="right">Right
+	    <input type="radio" ng-model="dexterity" value="left">Left
+
+	    <br/>
+
     	Select your height: 
 	    <select name="feet" ng-model="feet" ng-required="true">
 	      <option ng-repeat="f in feetMeasurement" value="{{f}}" ng-selected="{{f == feet}}">{{f}}</option>
@@ -35,20 +41,15 @@
 
 	    <br/>
 
-	    Golf Handedness:
-	    <input type="radio" ng-model="dexterity" value="right">Right
-	    <input type="radio" ng-model="dexterity" value="left">Left
-
-	    <br/>
-
-	    Gender:
-	    <input type="radio" ng-model="gender" value="male">Male
-	    <input type="radio" ng-model="gender" value="female">Female
+	    Additional Clubs Desired:
+	    <label ng-repeat="club in clubsValues[0].values">
+	        <input type="checkbox" ng-model="clubs[club]"> {{club.value}} 
+	    </label>
 
 	</section>
 
 	<button type="submit" 
-  		ng-disabled="frmStep1.$invalid">Next</button>
+  		ng-disabled="frmStep1.$invalid">Proceed to Shaft Type</button>
   	<br/>
   	<a ng-href="#/intro">Back to Intro</a>
 </form>
